--- a/styles/settings.less
+++ b/styles/settings.less
@@ -68,6 +68,10 @@
 
 	// Titles ------------------------------
 
+	.setting-title {
+		color: white;
+	}
+
 	.section .section-heading {
 		margin-bottom: @component-padding/1.5;
 	}
@@ -86,6 +90,15 @@
 		.meta-controls .status-indicator {
 			width: @component-padding/5;
 		}
+	}
+
+	// UI --------------------------------
+	input[type='checkbox']:checked {
+		background: white;
+	}
+
+	select.form-control {
+		color: @bw-light-grey;
 	}
 
 
