Fixed nested folders in tree view

--- a/styles/text.less
+++ b/styles/text.less
@@ -77,6 +77,10 @@ code {
 .highlight-color(error, @background-color-error, @text-color-error);
 .highlight-color(success, @background-color-success, @text-color-success);
 
+.linter-highlight.status-success {
+  color: @bw-light-green;
+}
+
 .results-view .path-details.list-item {
   color: darken(@text-color-highlight, 18%);
 }
