--- a/styles/tooltips.less
+++ b/styles/tooltips.less
@@ -4,7 +4,7 @@
 
   &.in {
     opacity: 1;
-    transition: opacity .12s ease-out;
+    // transition: opacity .12s ease-out;
   }
 
   .tooltip-inner {
