--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -13,7 +13,9 @@
 @bw-white: white;
 @bw-dark-grey: #333;
 @bw-light-grey: #dedede;
-@bw-pink: #e225a7;
+@bw-pink: #fe21b9;
+@bw-light-pink: #f08ae6;
+@bw-light-green: #7FC75C;
 
 // Solar colours
 
@@ -129,8 +131,8 @@
 @input-selection-color:            darken(@background-color-selected, 6%);
 @input-selection-color-focus:      @background-color-selected;
 
-@tooltip-background-color:         @base-accent-color;
-@tooltip-text-color:               contrast(@tooltip-background-color, white, hsl(@ui-hue,100%,10%), 40% );
+@tooltip-background-color:         @bw-pink; //@base-accent-color;
+@tooltip-text-color:               white; //contrast(@tooltip-background-color, white, hsl(@ui-hue,100%,10%), 40% );
 @tooltip-text-key-color:           @tooltip-background-color;
 @tooltip-background-key-color:     @tooltip-text-color;
 
@@ -157,8 +159,8 @@
 @text-color-selected: @text-color-highlight;
 
 @text-color-info: #5293d8;
-@text-color-success: #26c26a;
-@text-color-warning: #ff982d;
+@text-color-success: #f6fb92;
+@text-color-warning: @bw-light-pink;
 @text-color-error: #c00;
 
 @text-color-added:    @text-color-success;  // green
