Fixed white color

--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -76,7 +76,7 @@
 }
 
 .directory.list-nested-item.selected > .header .name {
-  color: white;
+  color: @bw-light-grey;
 }
 
 // Arrow on selected folder
