--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -131,7 +131,7 @@
 @input-selection-color:            darken(@background-color-selected, 6%);
 @input-selection-color-focus:      @background-color-selected;
 
-@tooltip-background-color:         @bw-pink; //@base-accent-color;
+@tooltip-background-color:         @bw-light-pink; //@base-accent-color;
 @tooltip-text-color:               white; //contrast(@tooltip-background-color, white, hsl(@ui-hue,100%,10%), 40% );
 @tooltip-text-key-color:           @tooltip-background-color;
 @tooltip-background-key-color:     @tooltip-text-color;
