--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -19,16 +19,16 @@
 
 // Solar colours
 
-@solar-color-base01: #93A1A1;
-@solar-color-base01-dark: #304647;
+@solar-color-base01: @bw-white; //#93A1A1;
+@solar-color-base01-dark: @bw-dark-grey; //#304647;
 @solar-color-base02-light: lighten(@solar-color-base02, 5%);
-@solar-color-base02: #073642;
-@solar-color-base03: #002B36;
-@solar-color-base04: #00222D;
-@solar-color-base0: #839496;
-@solar-color-base1: #93a1a1;
+@solar-color-base02: @bw-dark-grey; //#073642;
+@solar-color-base03: @bw-dark-grey; //#002B36;
+@solar-color-base04: @bw-dark-grey; //#00222D;
+@solar-color-base0: @bw-light-grey; //#839496;
+@solar-color-base1: @bw-light-grey; //#93a1a1;
 @solar-color-base2: @bw-dark-grey; // #eee8d5;
-@solar-color-base3: #fdf6e3;
+@solar-color-base3: @bw-white;  //#fdf6e3;
 @solar-color-cyan:  @bw-white; //#2aa198;
 
 
@@ -73,10 +73,10 @@
 
 // Var + State Background Colors -------------------------------------
 
-@background-color-info:    hsl(208, 100%, 50%);
-@background-color-success: hsl(160,  70%, 42%);
+@background-color-info:    @bw-white; //hsl(208, 100%, 50%);
+@background-color-success: @bw-light-green; //hsl(160,  70%, 42%);
 @background-color-warning: hsl(32,   60%, 50%);
-@background-color-error:   hsl(0,    70%, 50%);
+@background-color-error:   hsl(0, 54%, 56%);
 
 @background-color-highlight: lighten(@base-background-color, 4%);
 @background-color-selected: lighten(@base-background-color, 8%);
@@ -86,7 +86,7 @@
 
 @app-background-color:             darken(@level-3-color, 2%);
 
-@tree-view-background-color:       white; //@level-3-color;
+@tree-view-background-color:       @bw-white; //@level-3-color;
 @tree-view-border-color:           @base-border-color;
 
 @tab-background-color:             @level-3-color;
@@ -132,7 +132,7 @@
 @input-selection-color-focus:      @background-color-selected;
 
 @tooltip-background-color:         @bw-light-pink; //@base-accent-color;
-@tooltip-text-color:               white; //contrast(@tooltip-background-color, white, hsl(@ui-hue,100%,10%), 40% );
+@tooltip-text-color:               @bw-white; //contrast(@tooltip-background-color, white, hsl(@ui-hue,100%,10%), 40% );
 @tooltip-text-key-color:           @tooltip-background-color;
 @tooltip-background-key-color:     @tooltip-text-color;
 
@@ -152,7 +152,7 @@
 
 // Text Colors -------------------------------------
 
-@text-color: white; //@solar-color-base2;
+@text-color: @bw-white; //@solar-color-base2;
 @text-color-subtle: @solar-color-base1;
 @text-color-faded: fade(@text-color, 20%);
 @text-color-highlight: @solar-color-base3;
