--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -81,7 +81,7 @@
 
 // Arrow on selected folder
 .list-tree li.list-nested-item.selected.status-modified > .list-item {
-  color: @bw-light-grey;// white;
+  color: @bw-light-grey;
 
   .name {
     color: @bw-light-grey;
@@ -96,3 +96,8 @@
     color: @bw-dark-grey;
   }
 }
+
+// Git modifications
+// .list-item.status-modified .name {
+//   color: @bw-light-pink;
+// }
