--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -63,7 +63,11 @@
 
 .list-group .icon,
 .list-tree .selected > .icon {
-    color: @bw-light-grey;
+  color: @bw-light-grey;
+}
+
+.list-tree li.list-nested-item > .list-item {
+  color: black;
 }
 
 // Top most directory
@@ -96,8 +100,3 @@
     color: @bw-dark-grey;
   }
 }
-
-// Git modifications
-// .list-item.status-modified .name {
-//   color: @bw-light-pink;
-// }
