Updated colors in sidebar to be less intrusive

--- a/styles/git.less
+++ b/styles/git.less
@@ -8,11 +8,11 @@
 // BW Overrides ---------------------------------
 
 .list-item.status-added .name {
-  color: @bw-light-blue;
+  // color: @bw-light-blue;
   text-decoration: underline;
 }
 
 .list-item.status-modified .name {
-  color: @bw-light-pink;
+  // color: @bw-light-pink;
   text-decoration: underline;
 }
