Fixed folder ignore color

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -159,8 +159,8 @@
 @text-color-highlight: @solar-color-base3;
 @text-color-selected: @text-color-highlight;
 
-@text-color-info: #5293d8;
-@text-color-success: #f6fb92;
+@text-color-info: @bw-dark-grey; //#5293d8;
+@text-color-success: @bw-dark-grey; //#f6fb92;
 @text-color-warning: @bw-light-pink;
 @text-color-error: #c00;
 
