--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -83,6 +83,11 @@
   color: @bw-light-grey;
 }
 
+.directory.status-ignored .header .name {
+  color: darken(@bw-light-grey, 10%);
+}
+
+
 // Arrow on selected folder
 .list-tree li.list-nested-item.selected.status-modified > .list-item {
   color: @bw-light-grey;
