--- a/styles/lists.less
+++ b/styles/lists.less
@@ -139,3 +139,7 @@ li.ui-sortable-helper {
   background: @background-color-highlight;
   box-shadow: 0 0 1px @base-border-color;
 }
+
+.path-name.bright {
+  color: @bw-light-green;
+}
