Updated found count number in search

--- a/styles/core.less
+++ b/styles/core.less
@@ -2,8 +2,12 @@
 
 .preview-pane .results-view .path-match-number {
   // show number also on selected item
-  color: inherit;
+  color: @bw-light-grey;
   opacity: .6;
+}
+
+.path-name.bright {
+  color: @bw-light-green;
 }
 
 .tool-panel.incompatible-packages {
